# sauce_demo_test_automation

./: .env.docker  .env.local  .gitignore  README.md  conftest.py  db_utils.py  docker-compose.yml  pyproject.toml  requirements.txt
.docker/: Dockerfile
.github/workflows/: python-ci.yml
init_db/: init.sql
pages/: cart_page.py  login_page.py  products_page.py
pages.egg-info/: PKG-INFO  SOURCES.txt
selenium_test_suite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_cart.py  test_login.py  test_sorting.py
